--- a/src/common.scss
+++ b/src/common.scss
@@ -1,3 +1,34 @@
 .body {
   font-family: 'Maven Pro', sans-serif;
+  font-size: 1.1rem;
+  .font-size-2{
+    font-size: 1.3rem;
+  }
+  .padding-l {
+    padding-left: 20px;
+  }
+  .padding-r {
+    padding-right: 20px;
+  }
+  .padding-t {
+    padding-top: 20px;
+  }
+  .padding-b {
+    padding-bottom: 20px;
+  }
+  .content {
+    padding: 20px 15px;
+    text-align: center;
+  }
+
+  .title {
+    font-family: 'Josefin Slab', serif;
+    font-size: 3rem;
+    text-align: center;
+    // height: 100%;
+    span {
+      margin-top: 10px;
+    }
+  }
 }
+
