--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,36 +1,64 @@
 .home {
-  padding: 20px 20px;
+  padding: 20px 0px;
+
   .grid {
     margin: 40px 0;
   }
+
   .video {
     text-align: center;
     border-radius: 5px;
   }
+
+
   .song {
     text-align: center;
     padding: 20px 0;
-    background-color: #ededed;
-    border-radius: 10px;
+    background-color: black;
+    color: white;
+    // border-radius: 10px;
+    .title {
+      padding: 15px 0;
+      border-bottom: 1px dotted white;
+      // background-color: white;
+    }
   }
+
+  .image2 {
+    text-align: right;
+    background: url('./assets/image2.jpg');
+    background-size: cover;
+
+    .black-layer {
+      background-color: rgb(0, 0, 0,0.7);
+
+      #video2 {
+        
+        border-radius: 0px;
+      }
+    }
+  }
+
   .image1 {
-    margin-top: 20px;
-    border-radius: 10px;
+    // margin-top: 20px;
+    // border-radius: 10px;
     background: url('./assets/image1.jpg');
     background-color: rgb(0, 0, 0);
     width: 100%;
     height: 45vw;
     background-size: cover;
     background-repeat: no-repeat;
+
     .black-layer {
-      background-color: rgb(0,0,0);
-      border-radius: 10px;
+      background-color: rgb(0, 0, 0);
+      // border-radius: 10px;
       width: 100%;
       height: 45vw;
       opacity: 0.9;
       transition: 1s;
       color: white;
       font-size: 3rem;
+
       &:hover {
         opacity: 0;
         font-size: 1rem;
