--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -1,8 +1,9 @@
 .banner {
   background: url("./assets/banner.jpg");
+  // filter:saturate(1);
   position: absolute;
   width: 100%;
-  height: 40vh;
+  height: 45vh;
   background-size: cover;
 }
 
@@ -18,7 +19,7 @@
   background-color: #f8f8f8;
 
   .padding-top-40 {
-    padding-top: 40vh;
+    padding-top: 45vh;
   }
 
 }
