maybe final changes

--- a/src/components/dearValentine/valentine.scss
+++ b/src/components/dearValentine/valentine.scss
@@ -34,6 +34,10 @@
     background: url('./../login/assets/collage.jpg');
   }
 
+  .hope {
+    background: url('./assets/8.jpg');
+  }
+
   .img {
     background-size: contain;
     width: 100%;
